--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <h2 class="nav_logo"><a href="#">TEAMFY</a></h2>
 
           <ul class="menu_items">
-            <img src="web-img/times.svg" alt="timesicon" id="menu_toggle" />
+            <img src="times.svg" alt="timesicon" id="menu_toggle" />
             <li><a href="#" class="nav_link">Home</a></li>
             <li><a href="#" class="nav_link">About</a></li>
             <li><a href="#" class="nav_link">Contact Us</a></li>
             <li><a href="#" class="nav_link">Download</a></li>
           </ul>
-          <img src="web-img/bars.svg" alt="timesicon" id="menu_toggle" />
+          <img src="bars.svg" alt="timesicon" id="menu_toggle" />
         </nav>
       </header>
       <!-- Header End -->
@@ -40,10 +40,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="TEAMFY-img/futbal.png" alt="heroImg" class="hero_img"/>
+            <img src="futbal.png" alt="heroImg" class="hero_img"/>
           </div>
         </div>
-        <img src="web-img/bg-bottom-hero.png" alt="" class="curveImg" />
+        <img src="bg-bottom-hero.png" alt="" class="curveImg" />
       </section>
       <!-- Hero End-->
     </main>
@@ -52,7 +52,7 @@
       <h2 class="footer-text"">Welcome to <span class="app-name">TEAMFY</span></h1>
     </div>
     <div class="footer-para">
-      <img src="TEAMFY-img/ftbl.jpg" alt="ftbl-img">
+      <img src="ftbl.jpg" alt="ftbl-img">
     </div>
     <div class="footer-intro">
 
