--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding by CodingNepal || www.codingnepalweb.com -->
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,13 +14,13 @@
           <h2 class="nav_logo"><a href="#">TEAMFY</a></h2>
 
           <ul class="menu_items">
-            <img src="times.svg" alt="timesicon" id="menu_toggle" />
+            <img src="web-img/times.svg" alt="timesicon" id="menu_toggle" />
             <li><a href="#" class="nav_link">Home</a></li>
             <li><a href="#" class="nav_link">About</a></li>
             <li><a href="#" class="nav_link">Contact Us</a></li>
             <li><a href="#" class="nav_link">Download</a></li>
           </ul>
-          <img src="bars.svg" alt="timesicon" id="menu_toggle" />
+          <img src="web-img/bars.svg" alt="timesicon" id="menu_toggle" />
         </nav>
       </header>
       <!-- Header End -->
@@ -40,22 +39,31 @@
             </div>
           </div>
           <div class="column">
-            <img src="futbal.png" alt="heroImg" class="hero_img"/>
+            <img src="TEAMFY-img/futbal.png" alt="heroImg" class="child-img"/>
           </div>
         </div>
-        <img src="bg-bottom-hero.png" alt="" class="curveImg" />
+        <img src="web-img/bg-bottom-hero.png" alt="" class="curveImg" />
       </section>
       <!-- Hero End-->
     </main>
 
-    <div class="footer">
-      <h2 class="footer-text"">Welcome to <span class="app-name">TEAMFY</span></h1>
+    <!-- <div class="footer reveal">
+      <h2 class="footer-text reveal">Welcome to <span class="app-name">TEAMFY</span></h1>
     </div>
-    <div class="footer-para">
-      <img src="ftbl.jpg" alt="ftbl-img">
+    <div class="footer-para reveal">
+      <img src="TEAMFY-img/team.png" alt="ftbl-img">
     </div>
-    <div class="footer-intro">
-
+    <div class="footer-about reveal">
+      <p class="para">TeamFY is your ultimate companion for sports enthusiasts, connecting players and teams to facilitate thrilling matches anytime, anywhere. Whether you're a seasoned athlete or a casual player looking for some friendly competition, TeamFY has you covered.</p>
+    </div> -->
+    <div class="footer-app reveal">
+      <img class="mobile-view" src="TEAMFY-img/app.png" width="30%">
+      <div class="dwn-it">
+        <span class="dwn">Discover The<span class="app">App</span></span>
+        <p class="ambition">Our goal is to tackle and clear away any excuses that might keep you on your couch and away from the pitch. No matter the place, building teams and setting up match days has never been this easy.</p>
+  <span class="image"><a href="https://play.google.com/store/apps/details?id=de.motain.iliga&hl=en_CA&gl=US" target="_blank"><img 
+class="install" src="TEAMFY-img/install.png" alt="install_app"/></a></span>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
