--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TEAMFY | Find Team</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="TEAMFY-img/logo.png">
+    <link rel="icon" type="image/x-icon" href="logo.png">
   </head>
   <body>
     <main>
@@ -14,13 +14,13 @@
           <h2 class="nav_logo"><a href="#">TEAMFY</a></h2>
 
           <ul class="menu_items">
-            <img src="web-img/times.svg" alt="timesicon" id="menu_toggle" />
+            <img src="times.svg" alt="timesicon" id="menu_toggle" />
             <li><a href="#" class="nav_link">Home</a></li>
             <li><a href="#" class="nav_link">About</a></li>
             <li><a href="#" class="nav_link">Contact Us</a></li>
             <li><a href="#" class="nav_link">Download</a></li>
           </ul>
-          <img src="web-img/bars.svg" alt="timesicon" id="menu_toggle" />
+          <img src="bars.svg" alt="timesicon" id="menu_toggle" />
         </nav>
       </header>
       <!-- Header End -->
@@ -39,10 +39,10 @@
             </div>
           </div>
           <div class="column">
-            <img src="TEAMFY-img/futbal.png" alt="heroImg" class="child-img"/>
+            <img src="futbal.png" alt="heroImg" class="child-img"/>
           </div>
         </div>
-        <img src="web-img/bg-bottom-hero.png" alt="" class="curveImg" />
+        <img src="bg-bottom-hero.png" alt="" class="curveImg" />
       </section>
       <!-- Hero End-->
     </main>
@@ -57,12 +57,12 @@
       <p class="para">TeamFY is your ultimate companion for sports enthusiasts, connecting players and teams to facilitate thrilling matches anytime, anywhere. Whether you're a seasoned athlete or a casual player looking for some friendly competition, TeamFY has you covered.</p>
     </div> -->
     <div class="footer-app reveal">
-      <img class="mobile-view" src="TEAMFY-img/app.png" width="30%">
+      <img class="mobile-view" src="app.png" width="30%">
       <div class="dwn-it">
         <span class="dwn">Discover The<span class="app">App</span></span>
         <p class="ambition">Our goal is to tackle and clear away any excuses that might keep you on your couch and away from the pitch. No matter the place, building teams and setting up match days has never been this easy.</p>
   <span class="image"><a href="https://play.google.com/store/apps/details?id=de.motain.iliga&hl=en_CA&gl=US" target="_blank"><img 
-class="install" src="TEAMFY-img/install.png" alt="install_app"/></a></span>
+class="install" src="install.png" alt="install_app"/></a></span>
       </div>
     </div>
     <script src="script.js"></script>
